[package]
name = "free_gpt_translator_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

base64 = "0.13"
hmac = "0.12.1"
sha2 = "0.10.2"
chrono = "0.4.22"
