[package]
name = "code8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1", features = ["full"] }