[package]
name = "dy_parse_fltk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
fltk = { version = "1.3.19", features = ["fltk-bundled"] }

# 异步
tokio = { version = "1.21.2", features = ["full"] }

# 网络
reqwest = {version = "0.11.12", features = ["json"] }

# json
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
