[package]
name = "dy_parse_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
tokio = { version = "1.28.0", features = ["full"] }
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"] }